remove guava dependency from api