@@ -1,9 +1,5 @@
 package net.zerobuilder.compiler.generate;
 
-import com.google.common.base.Function;
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
-import com.google.common.collect.ImmutableList;
 import com.squareup.javapoet.ClassName;
 import com.squareup.javapoet.FieldSpec;
 import com.squareup.javapoet.TypeSpec;
@@ -14,8 +10,12 @@ import net.zerobuilder.compiler.generate.DtoGoalContext.AbstractGoalContext;
 import net.zerobuilder.compiler.generate.DtoGoalContext.IGoal;
 import net.zerobuilder.compiler.generate.DtoGoalDescription.GoalDescription;
 
+import java.util.ArrayList;
 import java.util.List;
+import java.util.function.Function;
 
+import static java.util.Collections.emptyList;
+import static java.util.stream.Collectors.toList;
 import static javax.lang.model.element.Modifier.FINAL;
 import static javax.lang.model.element.Modifier.PRIVATE;
 import static net.zerobuilder.compiler.generate.BuilderContext.defineBuilderImpl;
@@ -28,6 +28,7 @@ import static net.zerobuilder.compiler.generate.GoalContextFactory.prepareGoal;
 import static net.zerobuilder.compiler.generate.UpdaterContext.defineUpdater;
 import static net.zerobuilder.compiler.generate.UpdaterContext.updaterType;
 import static net.zerobuilder.compiler.generate.Utilities.downcase;
+import static net.zerobuilder.compiler.generate.Utilities.transform;
 
 public final class Generator {
 
@@ -39,29 +40,26 @@ public final class Generator {
    */
   public static GeneratorOutput generate(GeneratorInput goals) {
     Function<GoalDescription, IGoal> prepare = prepareGoal(goals.buildersContext.generatedType);
-    ImmutableList.Builder<IGoal> builder = ImmutableList.builder();
-    for (GoalDescription goalDescription : goals.validGoals) {
-      builder.add(prepare.apply(goalDescription));
-    }
-    return generate(new Goals(goals.buildersContext, builder.build()));
+    List<IGoal> builder = transform(goals.validGoals, prepare);
+    return generate(new Goals(goals.buildersContext, builder));
   }
 
   private static DtoGeneratorOutput.GeneratorSuccess generate(Goals analysisResult) {
-    ImmutableList<AbstractGoalContext> goals = goals(analysisResult);
-    ImmutableList.Builder<BuilderMethod> methods = ImmutableList.builder();
+    List<AbstractGoalContext> goals = goals(analysisResult);
+    List<BuilderMethod> methods = new ArrayList<>();
     methods.addAll(builderMethods(goals));
     methods.addAll(toBuilderMethods(goals));
-    ImmutableList.Builder<FieldSpec> fields = ImmutableList.builder();
+    List<FieldSpec> fields = new ArrayList<>();
     if (analysisResult.buildersContext.recycle) {
       fields.add(analysisResult.buildersContext.cache);
     }
     fields.addAll(instanceFields(analysisResult, goals));
-    return new DtoGeneratorOutput.GeneratorSuccess(methods.build(),
-        nestedGoalTypes(goals), fields.build(), analysisResult.buildersContext.generatedType);
+    return new DtoGeneratorOutput.GeneratorSuccess(methods,
+        nestedGoalTypes(goals), fields, analysisResult.buildersContext.generatedType);
   }
 
-  private static ImmutableList<TypeSpec> nestedGoalTypes(ImmutableList<AbstractGoalContext> goals) {
-    ImmutableList.Builder<TypeSpec> builder = ImmutableList.builder();
+  private static List<TypeSpec> nestedGoalTypes(List<AbstractGoalContext> goals) {
+    List<TypeSpec> builder = new ArrayList<>();
     for (AbstractGoalContext goal : goals) {
       AbstractGoalDetails details = abstractGoalDetails.apply(goal);
       if (details.goalOptions.toBuilder) {
@@ -72,41 +70,35 @@ public final class Generator {
         builder.add(defineContract(goal));
       }
     }
-    return builder.build();
+    return builder;
   }
 
-  private static ImmutableList<BuilderMethod> toBuilderMethods(ImmutableList<AbstractGoalContext> goals) {
-    return FluentIterable.from(goals)
-        .filter(new Predicate<AbstractGoalContext>() {
-          @Override
-          public boolean apply(AbstractGoalContext goal) {
-            AbstractGoalDetails details = abstractGoalDetails.apply(goal);
-            return details.goalOptions.toBuilder;
-          }
+  private static List<BuilderMethod> toBuilderMethods(List<AbstractGoalContext> goals) {
+    return goals.stream()
+        .filter(goal -> {
+          AbstractGoalDetails details = abstractGoalDetails.apply(goal);
+          return details.goalOptions.toBuilder;
         })
-        .transform(goalToToBuilder)
-        .toList();
+        .map(goalToToBuilder)
+        .collect(toList());
   }
 
-  private static ImmutableList<BuilderMethod> builderMethods(ImmutableList<AbstractGoalContext> goals) {
-    return FluentIterable.from(goals)
-        .filter(new Predicate<AbstractGoalContext>() {
-          @Override
-          public boolean apply(AbstractGoalContext goal) {
-            AbstractGoalDetails details = abstractGoalDetails.apply(goal);
-            return details.goalOptions.builder;
-          }
+  private static List<BuilderMethod> builderMethods(List<AbstractGoalContext> goals) {
+    return goals.stream()
+        .filter(goal -> {
+          AbstractGoalDetails details = abstractGoalDetails.apply(goal);
+          return details.goalOptions.builder;
         })
-        .transform(goalToBuilder)
-        .toList();
+        .map(goalToBuilder)
+        .collect(toList());
   }
 
-  private static ImmutableList<FieldSpec> instanceFields(Goals analysisResult,
-                                                         ImmutableList<AbstractGoalContext> goals) {
+  private static List<FieldSpec> instanceFields(Goals analysisResult,
+                                                List<AbstractGoalContext> goals) {
     if (!analysisResult.buildersContext.recycle) {
-      return ImmutableList.of();
+      return emptyList();
     }
-    ImmutableList.Builder<FieldSpec> builder = ImmutableList.builder();
+    List<FieldSpec> builder = new ArrayList<>();
     for (AbstractGoalContext goal : goals) {
       AbstractGoalDetails details = abstractGoalDetails.apply(goal);
       if (details.goalOptions.toBuilder) {
@@ -122,7 +114,7 @@ public final class Generator {
             .initializer("new $T()", stepsType).build());
       }
     }
-    return builder.build();
+    return builder;
   }
 
   private static final Function<AbstractGoalContext, BuilderMethod> goalToToBuilder
@@ -131,15 +123,8 @@ public final class Generator {
   private static final Function<AbstractGoalContext, BuilderMethod> goalToBuilder
       = goalCases(GeneratorV.goalToBuilder, GeneratorB.goalToBuilder);
 
-  private static ImmutableList<AbstractGoalContext> goals(final Goals goals) {
-    return FluentIterable.from(goals.goals)
-        .transform(new Function<IGoal, AbstractGoalContext>() {
-          @Override
-          public AbstractGoalContext apply(IGoal goal) {
-            return goal.withContext(goals.buildersContext);
-          }
-        })
-        .toList();
+  private static List<AbstractGoalContext> goals(final Goals goals) {
+    return transform(goals.goals, goal -> goal.withContext(goals.buildersContext));
   }
 
   static String updaterField(AbstractGoalContext goal) {
@@ -152,12 +137,12 @@ public final class Generator {
 
   private static final class Goals {
     private final DtoBuildersContext.BuildersContext buildersContext;
-    private final ImmutableList<? extends IGoal> goals;
+    private final List<? extends IGoal> goals;
 
     private Goals(DtoBuildersContext.BuildersContext buildersContext,
                   List<? extends IGoal> goals) {
       this.buildersContext = buildersContext;
-      this.goals = ImmutableList.copyOf(goals);
+      this.goals = goals;
     }
   }
 }
